--- a/src/Componets/Projects/ProjectCard.module.css
+++ b/src/Componets/Projects/ProjectCard.module.css
@@ -8,9 +8,18 @@
     box-shadow: 0 16px 14px 0 #04152d;
     padding: 18px 24px;
     max-width: 400px;
+    margin-top: 100px;
 }
 .image{
-    margin-bottom: 26px;
+    margin-bottom: 16px;
+    width: 200px;
+    margin-top: -140px;
+     transition: transform 0.3s ease; /* Transición suave */
+   
+}
+.image:hover {
+    transform: scale(1.1); /* Aumentar el tamaño en un 20% */
+
 }
 .title{
         font-size: 25px;
