--- a/src/Componets/Studio/Studio.module.css
+++ b/src/Componets/Studio/Studio.module.css
@@ -1,43 +1,51 @@
 @import "../../vars.css";
 
-.Container{
+.Container {
     position: relative;
-    background-color: rgba(12, 12, 12, 0.6);
-    border-radius: 15px;
-    padding: 73px;
+    background-color: rgba(12, 12, 12, 0.236);
+    border-radius: 1rem;
+    padding: 3rem;
     margin-top: 129px;
     z-index: 1;
     margin-left: 10%;
     margin-right: 10%;
+    backdrop-filter: blur(10px); /* Efecto de difuminado */
+    box-shadow: 0 4px 15px rgba(255, 255, 255, 0.339);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    overflow: hidden;
 }
-.title{
+
+.title {
     color: var(--color-text);
     font-size: 70px;
     font-weight: 700;
     letter-spacing: 1.75px;
     text-transform: uppercase;
-
 }
-.content{
+
+.content {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
-.aboutImage{
+
+.aboutImage {
     width: 35%;
-    
 }
-.iconos{
+
+.iconos {
     padding: 20px;
     width: 100px;
 }
-.aboutItems{
+
+.aboutItems {
     color: var(--color-text);
     display: flex;
     flex-direction: column;
     gap: 50px;
 }
-.aboutItem{
+
+.aboutItem {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -45,45 +53,46 @@
     list-style: none;
     padding: 25px;
     background-image: linear-gradient(90deg,
-    rgba(162,215,232,0.42)0%,
-    rgba(255,255,255,0)100%);
+    rgba(162,215,232,0.42) 0%,
+    rgba(255,255,255,0) 100%);
     background-size: 0 100%;
     background-repeat: no-repeat;
     transition: 0.4s;
+    backdrop-filter: blur(5px); /* Efecto adicional para difuminado */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
 }
-.aboutItem:hover{
-    background-size: 100% 100%;
 
+.aboutItem:hover {
+    background-size: 100% 100%;
 }
-.aboutItem h3{
+
+.aboutItem h3 {
     font-size: 25px;
     font-weight: 600;
 }
-.aboutItem p{
-    font-size: 25px;
 
+.aboutItem p {
+    font-size: 25px;
 }
-@media screen and (max-width:830px){
-    .Container{
+
+@media screen and (max-width: 830px) {
+    .Container {
         background-color: transparent;
         padding-left: 0;
         padding-right: 0;
+        backdrop-filter: blur(15px);
     }
-    .content{
+    .content {
         flex-direction: column;
-
     }
-    .aboutImage{
+    .aboutImage {
         display: none;
     }
-    .aboutItems{
+    .aboutItems {
         margin-top: 29px;
     }
-    .aboutItem{
+    .aboutItem {
         padding-left: 0;
         padding-right: 0;
     }
-
-
-    
 }
