--- a/src/Componets/Trans/transp.module.css
+++ b/src/Componets/Trans/transp.module.css
@@ -1,14 +1,18 @@
 @import "../../vars.css";
 
 .container {
-    position: relative;
-    background-color: rgba(12, 12, 12, 0.6);
-    border-radius: 15px;
-    padding: 90px;
-    margin-top: 60px;
-    z-index: 1;
-    margin-left: 10%;
-    margin-right: 10%;
+  position: relative;
+  background-color: rgba(67, 65, 65, 0.236);
+  border-radius: 1rem;
+  padding: 3rem;
+  margin-top: 129px;
+  z-index: 1;
+  margin-left: 10%;
+  margin-right: 10%;
+  backdrop-filter: blur(10px); /* Efecto de difuminado */
+  box-shadow: 0 4px 15px rgba(255, 255, 255, 0.339);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  overflow: hidden;
 }
 
 /* Título principal */
@@ -17,6 +21,7 @@
   margin-bottom: 20px;
   font-weight: bold;
   color: #f5f5f5;
+  
 }
 
 /* Contenedor de contenido */
@@ -25,6 +30,7 @@
   flex-direction: row;
   align-items: center;
   gap: 22px;
+  
 }
 
 /* Contenedor de cada imagen para asegurar que no se superpongan */
@@ -33,13 +39,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 220px;
+  max-width: 230px;
+  margin-top: 90px;
 }
 
 /* Estilo de las imágenes de los iPhones */
 .img {
     
-  width: 200%;
+  width: 180%;
   transition: transform 0.2s ease;
   border-radius: 10px;
   margin-left: 10%;
@@ -59,8 +66,11 @@
   text-align: left;
   line-height: 1.6;
   color: #ddd;
-  background-color: #2a2a2a;
+  background-color: #5c6a7176;
   border-radius: 10px;
+  backdrop-filter: blur(10px); /* Efecto de difuminado */
+  box-shadow: 0 4px 15px rgba(255, 255, 255, 0.339);
+  border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 /* Subtítulo */
