--- a/src/Components/Trans/transp.module.css
+++ b/src/Components/Trans/transp.module.css
@@ -5,11 +5,11 @@
   background-color: rgba(67, 65, 65, 0.236);
   border-radius: 1rem;
   padding: 3rem;
-  margin-top: 129px;
+  margin-top: 8rem;
   z-index: 1;
   margin-left: 10%;
   margin-right: 10%;
-  backdrop-filter: blur(10px); /* Efecto de difuminado */
+  backdrop-filter: blur(10px);
   box-shadow: 0 4px 15px rgba(255, 255, 255, 0.339);
   border: 1px solid rgba(255, 255, 255, 0.2);
   overflow: hidden;
@@ -17,39 +17,35 @@
 
 /* Título principal */
 .title {
-  font-size: 3.5em;
-  margin-bottom: 20px;
+  font-size: 3.5rem;
+  margin-bottom: 1.25rem;
   font-weight: bold;
   color: #f5f5f5;
-  
+  text-align: center;
 }
 
 /* Contenedor de contenido */
 .content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  gap: 22px;
-  
+  gap: 2rem;
 }
 
 /* Contenedor de cada imagen para asegurar que no se superpongan */
 .imageContainer {
-  flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 230px;
-  margin-top: 90px;
+  width: 100%;
+  max-width: 14.375rem;
 }
 
 /* Estilo de las imágenes de los iPhones */
 .img {
-    
-  width: 180%;
+  width: 100%;
   transition: transform 0.2s ease;
-  border-radius: 10px;
-  margin-left: 10%;
+  border-radius: 0.625rem;
 }
 
 .img:hover {
@@ -58,31 +54,28 @@
 
 /* Contenedor de texto */
 .textContainer {
- position: relative;
- margin-top: 15px;
- margin-left: 6%;
-
-  padding: 35px;
+  position: relative;
+  padding: 2rem;
   text-align: left;
   line-height: 1.6;
   color: #ddd;
   background-color: #5c6a7176;
-  border-radius: 10px;
-  backdrop-filter: blur(10px); /* Efecto de difuminado */
+  border-radius: 0.625rem;
+  backdrop-filter: blur(10px);
   box-shadow: 0 4px 15px rgba(255, 255, 255, 0.339);
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
 
 /* Subtítulo */
 .subtitle {
-  font-size: 2.8em;
-  margin-bottom: 10px;
-  color: #f8b400; /* Color distintivo para subtítulos */
+  font-size: 2.8rem;
+  margin-bottom: 0.625rem;
+  color: #f8b400;
 }
 
 /* Texto descriptivo */
 .text {
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 /* Estilos responsivos */
@@ -94,7 +87,7 @@
   }
 
   .imageContainer {
-    max-width: 150px;
+    max-width: 9.375rem;
   }
 
   .textContainer {
