--- a/src/vars.css
+++ b/src/vars.css
@@ -1,12 +1,17 @@
-:root{
-    /*colores*/
-    --color-text: #fff; 
-    --color-primary: #586cbc;
-    --color-secondary: #19376b;
-    --color-dark: #0b2447;
-    --color-bg: #04152d;
-    
-    /*Lentras*/
-    --font-roboto: "roboto";
+:root {
+  /* Colores */
+  --color-text: #fff;
+  --color-primary: #586cbc;
+  --color-secondary: #19376b;
+  --color-dark: #0b2447;
+  --color-bg: #04152d;
 
+  /* Letras */
+  --font-roboto: "Roboto", sans-serif;
+
+  /* Puntos de quiebre para diseño responsivo */
+  --breakpoint-xs: 480px; /* Teléfonos pequeños */
+  --breakpoint-sm: 768px; /* Tablets */
+  --breakpoint-md: 1024px; /* Escritorios pequeños */
+  --breakpoint-lg: 1200px; /* Escritorios grandes */
 }
