--- a/src/Components/Hero/hero.module.css
+++ b/src/Components/Hero/hero.module.css
@@ -83,6 +83,15 @@
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.7);
+}
+
+.fotoPerfil img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 @keyframes floating {
